syntax = "proto3";

package url;

option go_package = "./;url";

service Url {
  rpc ShortenUrl(LongUrlRequest) returns (UrlDataResponse) {}
  rpc FollowUrl(ShortUrlRequest) returns (LongUrlResponse) {}
}

message LongUrlRequest {
  string longUrl = 1;
}

message UrlDataResponse {
  string longUrl = 1;
  string shortUrl = 2;
}

message ShortUrlRequest {
  string shortUrl = 1;
}

message LongUrlResponse {
  string longUrl = 1;
}